--- a/app/Resources/views/email/notification.html.twig
+++ b/app/Resources/views/email/notification.html.twig
@@ -1,9 +1,9 @@
-Destination: {{ r.category.destination.name }} <br>
-Tour: {{ r.category.name }} <br>
-{% if r.category.destination.id == 10 %}
-Date: {{ r.category.customDate|date("d.m.Y") }} <br>
+Destination: {{ r.tourDate.category.destination.name }} <br>
+Tour: {{ r.tourDate.category.name }} <br>
+{% if r.tourDate.category.destination.id == 10 %}
+Date: {{ r.tourDate.category.customDate|date("d.m.Y") }} <br>
 {% else %}
-Date: {{ r.category.date.date|date("d.m.Y") }} <br>
+Date: {{ r.tourDate.category.date.date|date("d.m.Y") }} <br>
 {% endif %}
 Email: {{ r.email }} <br>
 Name: {{ r.name }} <br>
